fix overflow hidden

--- a/public/css/styles2.css
+++ b/public/css/styles2.css
@@ -115,6 +115,7 @@ nav{
   width: 100%;
   position: relative;
   padding: 10vh 0 0 60px;
+  overflow: hidden;
 }
 
 .content{
